--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react-redux": "^7.2.9",
     "react-scripts": "^4.0.3",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
