--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
+    "styled-normalize": "^8.0.7",
     "uuid": "^9.0.0",
     "web-vitals": "^1.1.2"
   },
